add_subdirectory(navbar_w)

add_subdirectory(main_p)
add_subdirectory(other_p)

add_subdirectory(calendar_w)
add_subdirectory(calendar_body_w) 
add_subdirectory(day_w)
add_subdirectory(week_w)
add_subdirectory(month_w)
add_subdirectory(calendar_header_w) 
add_subdirectory(personal_calendar_header_w)
add_subdirectory(event_w)
add_subdirectory(event_d)
add_subdirectory(comments_container_w)
add_subdirectory(comment_w)
add_subdirectory(add_event_d)

add_subdirectory(tree_w)
add_subdirectory(tree_node_w)
add_subdirectory(tree_node_leaf_w)
add_subdirectory(tree_node_profile_w) 
add_subdirectory(tree_node_calendar_w)

add_subdirectory(tree_node_dir_w)
add_subdirectory(tree_node_subscriptions_dir_w) 
add_subdirectory(tree_node_other_dir_w) 
add_subdirectory(tree_node_public_group_w) 

add_subdirectory(options_w)
add_subdirectory(options_dir_w)
add_subdirectory(options_personal_calendar_w)
add_subdirectory(options_subscription_w)
add_subdirectory(options_calendars_dir_w)



add_subdirectory(application)
add_subdirectory(search_page)

add_subdirectory(managers)
add_subdirectory(entities)
add_subdirectory(utils)

add_subdirectory(unmet_deps)

