add_subdirectory(baseForAll)
add_subdirectory(calendarDbManager)
add_subdirectory(directoryDbManager)
add_subdirectory(eventDbManager)
add_subdirectory(nodeDbManager)
add_subdirectory(tagDbManager)
add_subdirectory(userDbManager)
add_subdirectory(profileDbManager)
add_subdirectory(commentDbManager)


add_subdirectory(mainModel)
add_subdirectory(widgets)

add_subdirectory(application)

add_subdirectory(managers)
add_subdirectory(entities)
add_subdirectory(utils)

add_subdirectory(db_managers)

add_subdirectory(unmet_deps)

